--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
             "email": "hakkadaikon@yahoo.co.jp"
         }
     ],
-    "require": {}
+    "require": {
+        "phrity/websocket": "3.2.0"
+    }
 }
