--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     ],
     "require": {
         "phrity/websocket": "3.2.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "3.65.0"
     }
 }
