--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "phrity/websocket": "3.2.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "3.65.0"
+        "friendsofphp/php-cs-fixer": "3.65.0",
+        "phpunit/phpunit": "11.5.1"
     }
 }
